crates/analyzer/tests/snapshots/errors__string_constructor_no_type_arg_list.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: missing generic argument for type `String`
  ┌─ [snippet]:3:3
  │
3 │   String()
  │   ^^^^^^ expected 1 generic argument
  │
  = Example: `String<32>`


